agregar dispositivos pequeños

--- a/admon/index.html
+++ b/admon/index.html
@@ -59,7 +59,7 @@
     <div class="container-fluid">
         <div class="row">
 
-            <div class="col-md-12 col-sm-12 main">
+            <div class="col-md-12 col-sm-12 col-xs-12 main">
                 <div class="jumbotron">
                     <img src="/assets/images/icono.png" width="300px" class="img-responsive center-block " />
                     <h1>Bienvenidx a la página de administración del contenido!</h1>
