--- a/admon/luchadores.html
+++ b/admon/luchadores.html
@@ -71,7 +71,7 @@
   <div class="container-fluid">
     <div class="row">
 
-      <div class="col-md-12 col-sm-12 main">
+      <div class="col-md-12 col-sm-12 col-xs-12 main">
         <h1 class="page-header">Coordinación de Luchadores</h1>
         <p>Se utilizará las prioridades alta, media y baja y el orden cronólogico (más nuevo a más viejo) para mostrar la información asociada a cada categoría</p>
         <button type="button" class="btn btn-raised btn-primary" onclick="agregarNuevaInformacion()">Agregar nueva información</button>
@@ -94,7 +94,7 @@
           </table>
         </div>
         <div id="editar" class="row" style="display: none;">
-          <div class="col-md-12 col-sm-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="panel panel-primary">
               <div class="panel-heading">
                 <h3 class="panel-title">Editar la información</h3>
@@ -164,7 +164,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 col-sm-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Vista Previa</h3>
