--- a/admon/actualidad.html
+++ b/admon/actualidad.html
@@ -71,7 +71,7 @@
   <div class="container-fluid">
     <div class="row">
 
-      <div class="col-md-12 col-sm-12 main">
+      <div class="col-md-12 col-sm-12 col-xs-12 main">
         <h1 class="page-header">Situación Actual</h1>
         <p>Las últimas 3 noticias de situación actual nacional o internacional, ordenadas por fecha, serán presentados en la página inicial</p>
         <button type="button" class="btn btn-raised btn-primary" onclick="agregarNuevaNoticia()">Agregar nueva información</button>
@@ -93,7 +93,7 @@
           </table>
         </div>
         <div id="editar" class="row" style="display: none;">
-          <div class="col-md-12 col-sm-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="panel panel-primary">
               <div class="panel-heading">
                 <h3 class="panel-title">Editar la situación actual</h3>
@@ -151,7 +151,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 col-sm-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Vista Previa</h3>
