--- a/admon/redesociales.html
+++ b/admon/redesociales.html
@@ -68,7 +68,7 @@
   <div class="container-fluid">
     <div class="row">
 
-      <div class="col-md-12 col-sm-12 main">
+      <div class="col-md-12 col-sm-12 col-xs-12 main">
         <h1 class="page-header">Redes Sociales</h1>
         <p>Las últimas 5 publicaciones de redes sociales, ordenadas por fecha, serán presentados en la página inicial</p>
         <button type="button" class="btn btn-raised btn-primary" onclick="agregarNuevapublicacion()">Agregar nueva publicación</button>
@@ -88,7 +88,7 @@
           </table>
         </div>
         <div id="editar" class="row" style="display: none;">
-          <div class="col-md-12 col-sm-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="panel panel-primary">
               <div class="panel-heading">
                 <h3 class="panel-title">Editar la publicación</h3>
@@ -109,7 +109,7 @@
                     <input type="text" id="fecha_publicacion" class="form-control">
                   </div>
                   <div id="instrucciones_fb" class="row">
-                    <div class="col-md-12 col-sm-12">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
                     <label>Pasos para obtener el código de la publicación en Facebook. Sólo funciona con publicaciones públicas</label>
                     </div>
                     <div class="col-md-4 col-sm-12">
@@ -123,7 +123,7 @@
                     </div>
                   </div>
                   <div id="instrucciones_tw" style="display: none;" class="row">
-                    <div class="col-md-12 col-sm-12">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
                     <label>Pasos para obtener el código de la publicación en Twitter.</label>
                     </div>
                     <div class="col-md-4 col-sm-12">
@@ -137,7 +137,7 @@
                     </div>
                   </div>
                   <div id="instrucciones_yt" style="display: none;" class="row">
-                    <div class="col-md-12 col-sm-12">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
                     <label>Pasos para obtener el código de la publicación en Youtube.</label>
                     </div>
                     <div class="col-md-4 col-sm-12">
@@ -151,7 +151,7 @@
                     </div>
                   </div>
                   <div id="instrucciones_tt" style="display: none;" class="row">
-                    <div class="col-md-12 col-sm-12">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
                     <label>Pasos para obtener el código de la publicación en Tik tok.</label>
                     </div>
                     <div class="col-md-4 col-sm-12">
@@ -184,7 +184,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-12 col-sm-12">
+          <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h3 class="panel-title">Vista Previa</h3>
