imagen de noticia popr default

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <div id="carrusel-0" style="display:none;">
-                    <img id="noticia-imagen-0" class="img-responsive" src="/assets/images/slider/slider-bg4.jpg"
+                    <img id="noticia-imagen-0" class="img-responsive"  onerror="this.src='/assets/images/default/Banner_proximos.png'" src="/assets/images/default/Banner_proximos.png"
                         alt="slider">
                     <div class="slider-content">
                         <div class="container">
@@ -181,7 +181,7 @@
             </div>
             <div class="item">
                 <div id="carrusel-1" style="display:none;">
-                    <img id="noticia-imagen-1" class="img-responsive" src="/assets/images/slider/slider-bg4.jpg"
+                    <img id="noticia-imagen-1" class="img-responsive"  onerror="this.src='/assets/images/default/Banner_proximos.png'" src="/assets/images/default/Banner_proximos.png"
                         alt="slider">
                     <div class="slider-content">
                         <div class="container">
@@ -205,7 +205,7 @@
             </div>
             <div class="item">
                 <div id="carrusel-2" style="display:none;">
-                    <img id="noticia-imagen-2" class="img-responsive" src="/assets/images/slider/slider-bg4.jpg"
+                    <img id="noticia-imagen-2" class="img-responsive" onerror="this.src='/assets/images/default/Banner_proximos.png'" src="/assets/images/default/Banner_proximos.png"
                         alt="slider">
                     <div class="slider-content">
                         <div class="container">
