--- a/admon/noticias.html
+++ b/admon/noticias.html
@@ -158,7 +158,7 @@
                 <div id="main-slide" class="carousel slide carousel-fade" data-ride="carousel">
                   <div class="carousel-inner">
                       <div class="item active">
-                          <img id="noticia-imagen-0" class="img-responsive" src="/assets/images/slider/slider-bg4.jpg" alt="slider">
+                          <img id="noticia-imagen-0" class="img-responsive"  onerror="this.src='/assets/images/default/Banner_proximos.png'" src="/assets/images/default/Banner_proximos.png"alt="slider">
                           <div class="slider-content">
                               <div class="container">
                                   <div class="row">
