--- a/admon/luchadores.html
+++ b/admon/luchadores.html
@@ -172,7 +172,7 @@
               <div class="panel-body">
                 <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix creative more business">
                   <figure class="single-portfolio">
-                      <img id="info-imagen-0" class="img-responsive" src="/assets/images/portfolio/work4.jpg" alt="">
+                      <img id="info-imagen-0" class="img-responsive" onerror="this.src='/assets/images/default/luchadores.png'" src="/assets/images/default/luchadores.png"  alt="">
                       <figcaption class="hover-content">
                           <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i
                                   class="material-icons">&#xE5C8;</i>
