--- a/info/quienes_somos.html
+++ b/info/quienes_somos.html
@@ -464,6 +464,20 @@
     <script src="/assets/js/wow.js"></script>
     <script src="/assets/js/jquery.slicknav.js"></script>
     <script src="/assets/js/main.js"></script>
+    <script>
+        $(document).ready(function () {
+            $.ajax({
+                url: '/php/oauth/get.php',
+                success: function(data) {
+                    var json = $.parseJSON(data);
+                    $("#login").attr("href", json.href);
+                    },
+                error: function() {
+                console.log('There was some error performing the AJAX call!');
+                }
+            });
+        });
+        </script>
 </body>
 
 </html>
