--- a/admon/actualidad.html
+++ b/admon/actualidad.html
@@ -196,8 +196,10 @@
                     <label>Pegue el código de la publicación </label>
                     <textarea id="codigo_publicacion" class="form-control" onfocusout="cambiarVistaPrevia(this)"></textarea>
                   </div>
-                  <button type="button" class="btn btn-raised btn-primary" onclick="guardarNoticia()">Guardar
-                    Información</button>
+                  <button type="button" class="btn btn-raised btn-primary" onclick="guardarNoticia()">
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" id="spinner_guardar"></span>
+                    <span>>Guardar Información</span>
+                  </button>
                   <div class="alert alert-danger" style="display: none;" role="alert"
                     id="problema_creando_noticia">
                     <h4 class="alert-heading">Tuvimos un problema!</h4>
