--- a/admon/noticias.html
+++ b/admon/noticias.html
@@ -195,7 +195,6 @@
                     <textarea id="codigo_publicacion" class="form-control" onfocusout="cambiarVistaPrevia(this)"></textarea>
                   </div>
                   <button type="button" class="btn btn-raised btn-primary" onclick="guardarNoticia()">
-                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" id="spinner_guardar"></span>
                     <span>>Guardar Noticia</span>
                   </button>
                   <div class="alert alert-danger" style="display: none;" role="alert"
@@ -248,6 +247,7 @@
       </div>
     </div>
   </div>
+  <div id="spinner_guardar" class="loading" style="display:none">Loading&#8230;</div>
 
   <!-- Bootstrap core JavaScript
     ================================================== -->
