--- a/admon/noticias.html
+++ b/admon/noticias.html
@@ -195,7 +195,7 @@
                     <textarea id="codigo_publicacion" class="form-control" onfocusout="cambiarVistaPrevia(this)"></textarea>
                   </div>
                   <button type="button" class="btn btn-raised btn-primary" onclick="guardarNoticia()">
-                    <span>>Guardar Noticia</span>
+                    <span>Guardar Noticia</span>
                   </button>
                   <div class="alert alert-danger" style="display: none;" role="alert"
                     id="problema_creando_noticia">
