--- a/admon/luchadores.html
+++ b/admon/luchadores.html
@@ -210,7 +210,7 @@
                     <textarea id="codigo_publicacion" class="form-control" onfocusout="cambiarVistaPrevia(this)"></textarea>
                   </div>
                   <button type="button" class="btn btn-raised btn-primary" onclick="guardarinformacion()">
-                    <span>>Guardar Información</span>
+                    <span>Guardar Información</span>
                   </button>
                   <div class="alert alert-danger" style="display: none;" role="alert"
                     id="problema_creando_info">
