--- a/admon/redesociales.html
+++ b/admon/redesociales.html
@@ -166,7 +166,7 @@
                     <textarea id="codigo_publicacion" class="form-control" onfocusout="cambiarVistaPrevia(this)"></textarea>
                   </div>
                   <button type="button" class="btn btn-raised btn-primary" onclick="guardarPublicacion()">
-                    <span>>Guardar Información</span>
+                    <span>Guardar Información</span>
                   </button>
                   <div class="alert alert-danger" style="display: none;" role="alert"
                     id="problema_creando_publicacion">
