cargar mas datos

--- a/admon/redesociales.html
+++ b/admon/redesociales.html
@@ -76,16 +76,18 @@
           <table id="lista_examinar" class="table table-striped">
             <thead>
               <tr>
-                <th>Red Social</th>
-                <th>Fecha</th>
+
                 <th>Editar</th>
                 <th>Eliminar</th>
+                <th>Red Social</th>
+                <th>Fecha</th>
               </tr>
             </thead>
             <tbody>
               
             </tbody>
           </table>
+          <button type="button" class="btn btn-raised btn-primary" onclick="cargarMas()" indice="0" id="cargar_mas">Cargar más publicaciones</button>
         </div>
         <div id="editar" class="row" style="display: none;">
           <div class="col-md-12 col-sm-12 col-xs-12">
