--- a/admon/luchadores.html
+++ b/admon/luchadores.html
@@ -79,19 +79,20 @@
           <table id="lista_examinar" class="table table-striped">
             <thead>
               <tr>
+                <th>Editar</th>
+                <th>Eliminar</th>
                 <th>Categoría</th>
                 <th>Título</th>
                 <th>Prioridad</th>
                 <th>Fecha</th>
                 <th>Descripción</th>
-                <th>Editar</th>
-                <th>Eliminar</th>
               </tr>
             </thead>
             <tbody>
               
             </tbody>
           </table>
+          <button type="button" class="btn btn-raised btn-primary" onclick="cargarMas()" indice="0" id="cargar_mas">Cargar más publicaciones</button>
         </div>
         <div id="editar" class="row" style="display: none;">
           <div class="col-md-12 col-sm-12 col-xs-12">
